--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -29,6 +29,7 @@
   color: blue;
   background-color: #ccc;
   margin: 0;
+  border-radius: 5px;
 }
 .card-body {
   margin-bottom: 18px;
@@ -36,13 +37,21 @@
   border-radius: 5px;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
+  .Header {
+    height: 70px;
+  }
   .heading {
     font-size: 2rem;
+    line-height: 70px;
   }
 }
 @media screen and (max-width: 767px) {
+  .Header {
+    height: 50px;
+  }
   .heading {
     font-size: 1.2rem;
+    line-height: 50px;
   }
   .cardImg {
     display: none;
@@ -50,9 +59,11 @@
   .name {
     width: 100%;
     height: 50px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: 1px solid #333;
     line-height: 50px;
+    border-radius: 5px;
     background-color: azure;
+    font-size: 24px;
+    padding: 0;
   }
 }
