--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: cornflowerblue;
+  padding-bottom: 3rem;
 }
 
 .Header {
@@ -36,6 +37,23 @@
   border: 1px solid #333;
   border-radius: 5px;
 }
+.div-img {
+  width: 50%;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.card-body {
+  margin-top: 20px;
+}
+h5.card-title {
+  font-size: 4rem;
+  color: blue;
+  margin-top: 14px;
+}
+p.card-text {
+  font-size: 1.9rem;
+}
+
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .Header {
     height: 70px;
@@ -43,6 +61,15 @@
   .heading {
     font-size: 2rem;
     line-height: 70px;
+  }
+  h5.card-title {
+    font-size: 3rem;
+  }
+  p.card-text {
+    font-size: 1.4rem;
+  }
+  .div-img {
+    margin-left: 163px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -65,5 +92,14 @@
     background-color: azure;
     font-size: 24px;
     padding: 0;
+  }
+  h5.card-title {
+    font-size: 2.5rem;
+  }
+  p.card-text {
+    font-size: 1.3rem;
+  }
+  .div-img {
+    width: 100%;
   }
 }
