--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -31,3 +31,12 @@ address {
 .navbar-dark {
   background-color: #512da8;
 }
+.leader {
+  margin-left: 150px;
+}
+.div {
+  margin-top: -7rem;
+}
+.row-container {
+  margin-top: 2.5rem;
+}
