--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,8 +1,28 @@
 .header {
   background-color: #0d6efd;
 }
+.staff {
+  margin-top: 14px;
+  color: red;
+  border-bottom: 1px solid #333;
+}
 .collapse.navbar-collapse {
   margin-left: 14px;
+}
+.col-lg-2.col-md-4.col-6 {
+  margin-bottom: 12px;
+}
+h5.card-title {
+  margin-top: 12px;
+  text-align: center;
+  background-color: #ccc;
+}
+.p-3.card {
+  margin: 12px;
+  background-color: #e9ecef;
+}
+.col-12 {
+  margin-bottom: 12px;
 }
 .row-header {
   margin: 0px auto;
@@ -20,7 +40,7 @@
 
 .footer {
   background-color: #04c8ee;
-  margin: 0px auto;
+  margin: 18px 0 auto;
   padding: 20px 0px 20px 0px;
 }
 .jumbotron {
