--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,28 @@ button.btn.btn-secondary {
   margin-left: 12px;
 }
 
+.page-enter {
+  opacity: 0.01;
+  transform: translateX(-100%);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  transition: all 300ms ease-in;
+}
+
+.page-exit {
+  opacity: 1;
+  transform: translateX(0%);
+}
+
+.page-exit-active {
+  opacity: 0.01;
+  transform: translateX(100%);
+  transition: all 300ms ease-out;
+}
+
 @media screen and (max-width: 991px) {
   .form {
     width: 108%;
